# agentgate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  ci_dev_tooling.yml  config.yml  docs_issue.yml  feature_request.yml  integration_help.yml
.github/actions/agentgate-gate/: README.md  action.yml
.github/workflows/: audit-coupling.yml  ci.yml  release-gate-demo.yml
.sandcastle/: .env.example  CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.mts  review-prompt.md
DEMO/: keynote.md  narration.md  recording-plan.md  youtube-thumbnail.html
artifacts/seed/: seed_v21_evidence.jsonl  seed_v2_evidence.jsonl
backend/: __init__.py
backend/agentgate/: __init__.py  cli.py  main.py  settings.py
backend/agentgate/adk/: dataset_planner_agent.py  pattern_finder_agent.py  release_evidence_agent.py  tools.py
backend/agentgate/api/: __init__.py  routes_health.py
backend/agentgate/core/: __init__.py  agent_pack.py  config.py  product_config.py
backend/agentgate/demo/: __init__.py  demo_cases.py  demo_cases_loader.py  eval_label_schema.py  span_event_schema.py  trace_seed_generator.py
backend/agentgate/evals/: __init__.py  annotation_loader.py  annotation_parser.py  coverage_report.py  dataset_sync.py  evaluator_registry.py  phoenix_client_config.py  phoenix_eval_runner.py  span_eval_frame.py
backend/agentgate/release/: __init__.py  agentic_review.py  artifact_writer.py  audit_session_report.py  dangerous_evidence_classifier.py  dangerous_evidence_semantics.py  decision_engine.py  deterministic_diagnoser.py  (+15 more)
configs/phoenix/: README.md  metrics.json  policy.json
docs/: ARCHITECTURE.md  DEMO_CICD.md  PRD.md  PRD_PRODUCT.md  README.md  REFERENCE_WORKFLOW.md
docs/adr/: 0001-two-layer-config.md  0002-default-demo-pack.md  0003-fixed-metric-catalog.md  0004-report-config-injection.md  0005-external-agent-repos.md  README.md
docs/getting-started/: DEPLOYMENT.md  RELEASE_PIPELINE.md
docs/integration/: AGENTGATE_INTEGRATION_SKILL.md  AGENTPACK.md  CONNECT_YOUR_AGENT.md  INTEGRATION_CONTRACT.md  PHOENIX_INTEGRATION.md  README.md  RELEASE_OUTPUT.md
examples/artifacts/: README.md
my-deck/: AGENTS.md  package-lock.json
scripts/: audit_agent_coupling.sh  playwright_deck_shots.py  playwright_report_expand_audit.py  playwright_report_section_shots.py  playwright_ui_audit.py
tests/fixtures/: paths.py
tests/unit/: test_adk_release_agent.py  test_agent_pack.py  test_agentic_review_docs.py  test_audit_session_report.py  test_cli.py  test_config_load.py  test_dangerous_evidence_classifier.py  test_dangerous_evidence_semantics.py  test_dashboard.py  test_decision_engine.py  test_demo_cases.py  test_demo_path_reference_artifacts.py  test_demo_story.py  test_demo_wording_truthfulness.py  test_eval_contract_schemas.py  test_eval_coverage.py  test_evaluator_registry.py  test_future_verification.py  test_gate_binding.py  test_gemini_diagnoser.py  test_health.py  test_html_report_export.py  test_metric_provenance.py  test_phoenix_annotation_normalizer.py  test_phoenix_eval_runner.py  test_phoenix_release_check.py  test_phoenix_span_identity.py  test_prd_day7_plan.py  test_reference_workflow_doc.py  test_release_check.py  test_runtime_metric_catalog.py  test_settings.py  test_telemetry_replay.py  test_trace_seed_generator.py
(+77 files in other folders)
