[project]
name = "agentgate"
version = "0.1.0"
description = "Release authority for AI agents — Phoenix evidence, policy gates, auditable artifacts"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-client>=1.0.0",
    "arize-phoenix-evals>=2.0.0",
    "arize-phoenix-otel>=0.16.1",
    "fastapi>=0.115.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.0",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=2.0.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/azrael8576/agentgate#readme"
Repository = "https://github.com/azrael8576/agentgate"
Issues = "https://github.com/azrael8576/agentgate/issues"

[project.scripts]
agentgate = "backend.agentgate.cli:app"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=2.1.0",
    "pytest>=8.3.0",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length — ruff format handles layout; long fixture strings stay readable
    "B008", # Typer/FastAPI require callable defaults (Option, Argument, Depends)
]

[tool.ruff.lint.per-file-ignores]
# Vertex env must be configured before importing modules that read GCP settings.
"backend/agentgate/cli.py" = ["E402"]
# Re-export public API from loader / catalog modules.
"backend/agentgate/demo/demo_cases.py" = ["F401"]
"backend/agentgate/evals/evaluator_registry.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
files = ["backend"]
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
disallow_untyped_defs = false
pretty = true
show_error_codes = true
